Fix VNC server security flag for tigervnc
Added a warning flag to the vncserver command to indicate insecurity.

--- a/scripts/supervisord.conf
+++ b/scripts/supervisord.conf
@@ -5,7 +5,7 @@ pidfile=/var/run/supervisord.pid
 user=root
 
 [program:vncserver]
-command=/bin/bash -c 'rm -rf /tmp/.X1-lock /tmp/.X11-unix/X1 2>/dev/null; vncserver :1 -geometry 1920x1080 -depth 24 -localhost no -SecurityTypes None'
+command=/bin/bash -c 'rm -rf /tmp/.X1-lock /tmp/.X11-unix/X1 2>/dev/null; vncserver :1 -geometry 1920x1080 -depth 24 -localhost no -SecurityTypes None --I-KNOW-THIS-IS-INSECURE'
 user=developer
 autorestart=true
 priority=10
