feat: Modernize XFCE desktop environment
Replaced Xvfb with Xorg (dummy driver) and enabled compositing to provide a more modern and visually appealing desktop experience.

Changes include:
- Created config/xorg.conf for Xorg dummy driver configuration.
- Modified Dockerfile to:
  - Replace 'xvfb' with 'xserver-xorg-video-dummy xserver-xorg-core'.
  - Add COPY instruction for config/xorg.conf.
- Modified scripts/supervisord.conf to use Xorg instead of Xvfb.
- Modified scripts/start-desktop.sh to enable compositing and adjust XFCE settings.
- Modified config/xfce4/xfconf/xfce-perchannel-xml/xfwm4.xml to set use_compositing to true by default.

--- a/scripts/supervisord.conf
+++ b/scripts/supervisord.conf
@@ -29,16 +29,17 @@ stdout_logfile=/var/log/pulseaudio.log
 stderr_logfile=/var/log/pulseaudio.err
 
 # =============================================================================
-# Xvfb (Virtual Framebuffer)
+# X11 Server (Xorg dummy) - REPLACES XVFB SECTION
 # =============================================================================
-[program:xvfb]
-command=/usr/bin/Xvfb :0 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset
-user=developer
+[program:xorg]
+# The command to run Xorg with the dummy driver using our config
+command=/usr/bin/Xorg :0 -noreset +extension GLX +extension RANDR +extension RENDER -logfile /var/log/xorg.log -config /etc/X11/xorg.conf
+user=root
 autorestart=true
 priority=15
-environment=HOME="/home/developer"
-stdout_logfile=/var/log/xvfb.log
-stderr_logfile=/var/log/xvfb.err
+# Xorg needs to run as root to set up the display, but we drop privileges for the session
+stdout_logfile=/var/log/xorg.log
+stderr_logfile=/var/log/xorg.err
 
 # =============================================================================
 # XFCE4 Desktop
