fix: Selkies configuration adjustments for Xorg/XFCE
Applied necessary fixes and adjustments to the Selkies configuration to ensure reliable operation with the new Xorg/XFCE setup.

Changes include:
- Added 'basicauth' Python dependency to Dockerfile's pip install.
- Modified scripts/supervisord.conf to explicitly pass SELKIES environment variables (encoder, framerate, bitrate) to selkies-gstreamer.
- Added STUN server environment variables (SELKIES_P2P_STUN_HOST, SELKIES_P2P_STUN_PORT) to docker-compose.yml for improved WebRTC connection reliability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       SELKIES_VIDEO_BITRATE: 8000
       SELKIES_ENABLE_RESIZE: "true"
       SELKIES_ENABLE_BASIC_AUTH: "true"
+      # Use Google's public STUN server to help WebRTC find the connection
+      SELKIES_P2P_STUN_HOST: stun.l.google.com
+      SELKIES_P2P_STUN_PORT: 19302
 
       # GPU (need 'all' for NVENC encoding)
       NVIDIA_VISIBLE_DEVICES: all
